# src/app/components/_common/_model/user.ts
@@ -1,7 +1,6 @@
 ﻿export class User {
     firstname?: string; 
     lastname?: string;
-    password?: string;
     email?: string;     
     roles?: string[]; 
 }
